--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Harun Durak</title>
+  <link rel="icon" type="image/x-icon" href="assets/img/star-regular.svg">
+  <link rel="stylesheet" href="styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+</head>
+
+<body>
+  <div class="section" id="home">
+    <div class="img-photo">
+      <img src="assets/img/photo.jpeg" class="rounded-circle img-fluid img-cover" alt="Harun Durak" />
+    </div>
+    <h1 class="display-4">
+      Hi, I'm
+      <b>Harun Durak</b>
+    </h1>
+    <h3 style="text-align: center;">Frontend Developer</h3>
+    <div id="cta">
+      <a class="link" href="http://harundurak.com/">
+        <button class="btn-wide" id="btnContact">
+          harundurak.com
+        </button>
+      </a>
+    </div>
+    <div class="social-media-buttons">
+      <a target="_blank" href="https://github.com/HarunDurak">
+        <img class="icon" src="assets/img/github.svg" alt="Harun-Durak-Github">
+      </a>
+      <a target="_blank" href="https://www.linkedin.com/in/harun-durak-55043b218/">
+        <img class="icon" src="assets/img/linkedin-in.svg" alt="Harun-Durak-Linkedin">
+      </a>
+      <a target="_blank" href="https://www.instagram.com/harndrak/">
+        <img class="icon" src="assets/img/instagram.svg">
+      </a>
+      </a>
+    </div>
+  </div>
+</body>
+
+</html>
